--- a/webview/css/tailwind.css
+++ b/webview/css/tailwind.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Quicksand", "sans-serif";
-  --font-emoji: "Noto Color Emoji", "sans-serif";
+  --font-sans: "Quicksand", sans-serif;
+  --font-emoji: "Noto Color Emoji", local('Apple Color Emoji'), sans-serif;
 
   --breakpoint-xs: 400px;
 }
